# TP2021

.github/workflow/: main.yml
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt
task2/C/: main.cpp  tests.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/src/03-weather/: Weather.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task6/: docker-compose.yml
task6/DostavimVse/: Dockerfile
task6/cmake-with-flask/: Dockerfile
